crates/running-process/tests/ui/brokered_backend_state_in_bind.stderr
error[E0185]: method `bind` has a `&self` declaration in the impl, but not in the trait
  --> tests/ui/brokered_backend_state_in_bind.rs:20:5
   |
20 |     fn bind(&self, _endpoint: &Endpoint) -> Result<IpcListener, BindError> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&self` used in impl
   |
   = note: `bind` from trait: `fn(&str) -> std::result::Result<interprocess::local_socket::listener::r#enum::Listener, BindError>`
